# rivetkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  se6-module-loading-perf-audit.md
.github/workflows/: release.yml
crates/: CLAUDE.md
crates/execution/: CLAUDE.md  Cargo.toml
crates/execution/src/: benchmark.rs  node_import_cache.rs
crates/execution/tests/: benchmark.rs  javascript.rs
examples/quickstart/: package.json
examples/quickstart/src/: agent-to-agent.ts  multiplayer.ts  queues.ts  s3-filesystem.ts  sqlite.ts  webhooks.ts
registry/: CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  package.json
registry/agent/claude/: package.json
registry/agent/codex/: package.json
registry/agent/opencode/: package.json
registry/agent/pi/: package.json
registry/agent/pi-cli/: package.json
registry/agent/pi/src/: index.ts
registry/file-system/google-drive/: README.md  package.json
registry/file-system/s3/: package.json
registry/native/: Cargo.toml
registry/native/c/: Makefile
registry/native/crates/commands/codex-exec/: Cargo.toml
registry/native/crates/commands/codex-exec/src/: main.rs
registry/native/crates/commands/http-test/: Cargo.toml
registry/native/crates/commands/http-test/src/: main.rs
registry/native/crates/commands/sh/: Cargo.toml
registry/native/crates/commands/timeout/: Cargo.toml
registry/native/patches/: 0001-wasi-process-spawn.patch
registry/native/scripts/: patch-vendor.sh  patch-wasi-libc.sh  test-gnu.sh
registry/scripts/: generate-readme.mjs
registry/software/build-essential/: agent-os-package.json  package.json
registry/software/codex/: agent-os-package.json  package.json
registry/software/common/: agent-os-package.json  package.json
registry/software/coreutils/: agent-os-package.json  package.json
registry/software/curl/: agent-os-package.json  package.json
registry/software/diffutils/: agent-os-package.json  package.json
registry/software/fd/: agent-os-package.json  package.json
registry/tests/: helpers.ts  smoke.test.ts
scripts/: release.ts
scripts/benchmarks/: bench-utils.ts  coldstart.bench.ts  run-benchmarks.sh
(+299 files in other folders)
