[package]
name = "cmd-codex-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "codex-exec headless agent binary for secure-exec WasmVM"

[[bin]]
name = "codex-exec"
path = "src/main.rs"

[dependencies]
wasi-spawn = { package = "secureexec-wasi-spawn", path = "../../libs/wasi-spawn" }
wasi-http = { package = "secureexec-wasi-http", path = "../../libs/wasi-http" }

# WASI stub crates for codex-core dependencies that don't support wasm32-wasip1
codex-network-proxy = "0.0.0"
codex-otel = "0.0.0"
