[package]
name = "cmd-http-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP client test binary for validating wasi-http through host_net"

[[bin]]
name = "http-test"
path = "src/main.rs"

[dependencies]
wasi-http = { package = "secureexec-wasi-http", path = "../../libs/wasi-http" }
